project(Data-Structure-Study)


add_executable(4_MedianOfTwoSortedArrays ./editor/cn/4_MedianOfTwoSortedArrays.cpp)
add_executable(15_ThreeSum ./editor/cn/15_ThreeSum.cpp)
add_executable(75_SortColors ./editor/cn/75_SortColors.cpp)
add_executable(76_MinimumWindowSubstring ./editor/cn/76_MinimumWindowSubstring.cpp)
add_executable(142_LinkedListCycleIi ./editor/cn/142_LinkedListCycleIi.cpp)
add_executable(234_PalindromeLinkedList ./editor/cn/234_PalindromeLinkedList.cpp)
add_executable(283_MoveZeroes ./editor/cn/283_MoveZeroes.cpp)
add_executable(19_RemoveNthNodeFromEndOfList ./editor/cn/19_RemoveNthNodeFromEndOfList.cpp)