project(Data-Structure-Study)


add_executable(4_MedianOfTwoSortedArrays ./editor/cn/4_MedianOfTwoSortedArrays.cpp)
add_executable(15_ThreeSum ./editor/cn/15_ThreeSum.cpp)
add_executable(75_SortColors ./editor/cn/75_SortColors.cpp)
add_executable(76_MinimumWindowSubstring ./editor/cn/76_MinimumWindowSubstring.cpp)
add_executable(142_LinkedListCycleIi ./editor/cn/142_LinkedListCycleIi.cpp)
add_executable(234_PalindromeLinkedList ./editor/cn/234_PalindromeLinkedList.cpp)
add_executable(283_MoveZeroes ./editor/cn/283_MoveZeroes.cpp)
add_executable(19_RemoveNthNodeFromEndOfList ./editor/cn/19_RemoveNthNodeFromEndOfList.cpp)
add_executable(148_SortList ./editor/cn/148_SortList.cpp)
add_executable(160_IntersectionOfTwoLinkedLists ./editor/cn/160_IntersectionOfTwoLinkedLists.cpp)
add_executable(206_ReverseLinkedList ./editor/cn/206_ReverseLinkedList.cpp)
add_executable(20_ValidParentheses ./editor/cn/20_ValidParentheses.cpp)
add_executable(21_MergeTwoSortedLists ./editor/cn/21_MergeTwoSortedLists.cpp)
add_executable(84_LargestRectangleInHistogram ./editor/cn/84_LargestRectangleInHistogram.cpp)
add_executable(42_TrappingRainWater ./editor/cn/42_TrappingRainWater.cpp)
add_executable(85_MaximalRectangle ./editor/cn/85_MaximalRectangle.cpp)