project(Data-Structure-Study)


add_executable(4_MedianOfTwoSortedArrays ./editor/cn/4_MedianOfTwoSortedArrays.cpp)
add_executable(15_ThreeSum ./editor/cn/15_ThreeSum.cpp)
add_executable(75_SortColors ./editor/cn/75_SortColors.cpp)
add_executable(76_MinimumWindowSubstring ./editor/cn/76_MinimumWindowSubstring.cpp)
add_executable(142_LinkedListCycleIi ./editor/cn/142_LinkedListCycleIi.cpp)
add_executable(234_PalindromeLinkedList ./editor/cn/234_PalindromeLinkedList.cpp)
add_executable(283_MoveZeroes ./editor/cn/283_MoveZeroes.cpp)
add_executable(19_RemoveNthNodeFromEndOfList ./editor/cn/19_RemoveNthNodeFromEndOfList.cpp)
add_executable(148_SortList ./editor/cn/148_SortList.cpp)
add_executable(160_IntersectionOfTwoLinkedLists ./editor/cn/160_IntersectionOfTwoLinkedLists.cpp)
add_executable(206_ReverseLinkedList ./editor/cn/206_ReverseLinkedList.cpp)
add_executable(20_ValidParentheses ./editor/cn/20_ValidParentheses.cpp)
add_executable(21_MergeTwoSortedLists ./editor/cn/21_MergeTwoSortedLists.cpp)
add_executable(84_LargestRectangleInHistogram ./editor/cn/84_LargestRectangleInHistogram.cpp)
add_executable(42_TrappingRainWater ./editor/cn/42_TrappingRainWater.cpp)
add_executable(85_MaximalRectangle ./editor/cn/85_MaximalRectangle.cpp)
add_executable(155_MinStack ./editor/cn/155_MinStack.cpp)
add_executable(239_SlidingWindowMaximum ./editor/cn/239_SlidingWindowMaximum.cpp)
add_executable(394_DecodeString ./editor/cn/394_DecodeString.cpp)
add_executable(739_DailyTemperatures ./editor/cn/739_DailyTemperatures.cpp)
add_executable(3_LongestSubstringWithoutRepeatingCharacters ./editor/cn/3_LongestSubstringWithoutRepeatingCharacters.cpp)
add_executable(49_GroupAnagrams ./editor/cn/49_GroupAnagrams.cpp)
add_executable(128_LongestConsecutiveSequence ./editor/cn/128_LongestConsecutiveSequence.cpp)
add_executable(141_LinkedListCycle ./editor/cn/141_LinkedListCycle.cpp)
add_executable(146_LruCache ./editor/cn/146_LruCache.cpp)
add_executable(560_SubarraySumEqualsK ./editor/cn/560_SubarraySumEqualsK.cpp)
add_executable(94_BinaryTreeInorderTraversal ./editor/cn/94_BinaryTreeInorderTraversal.cpp)
add_executable(101_SymmetricTree ./editor/cn/101_SymmetricTree.cpp)
add_executable(102_BinaryTreeLevelOrderTraversal ./editor/cn/102_BinaryTreeLevelOrderTraversal.cpp)